--- a/package.json
+++ b/package.json
@@ -7,20 +7,32 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:server": "env-cmd -f ./backend/config/dev.env nodemon app.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "bcrypt": "^4.0.1",
+    "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "material-design-icons": "^3.0.1",
+    "mongoose": "^5.9.9",
+    "multer": "^1.4.2",
     "rxjs": "~6.5.4",
+    "sharp": "^0.25.2",
     "tslib": "^1.10.0",
+    "validator": "^13.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -28,10 +40,11 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "env-cmd": "^10.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -39,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "nodemon": "^2.0.3",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
