--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "material-design-icons": "^3.0.1",
     "mongoose": "^5.9.9",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.3",
     "sharp": "^0.25.2",
-    "nodemon": "^2.0.3"
+    "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
