--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "env-cmd -f ./config/dev.env nodemon app.js"
   },
   "dependencies": {
+    "authy": "^1.4.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +22,7 @@
     "xlsx-to-json-lc": "^0.5.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "twilio-run": "^2.6.0"
   }
 }
